# free-space

./: .env.example  .gitignore  docker-compose.yml  setup.md  start.ps1
.claude/: settings.local.json
.cursor/hooks/state/: continual-learning.json
.github/workflows/: ci.yml
backend/: Dockerfile  Dockerfile.celery  conftest.py  makefile  manage.py  pyproject.toml
backend/apps/comments/: admin.py  apps.py  constants.py  events.py  exceptions.py  models.py  permissions.py  selectors.py  serializers.py  services.py  urls.py  validators.py  views.py
backend/apps/comments/migrations/: 0001_initial.py
backend/apps/comments/tests/: conftest.py  factories.py  test_events.py  test_selectors.py  test_services.py  test_views.py
backend/apps/common/: models.py  serializers.py  urls.py  views.py
backend/apps/common/gdpr/: __init__.py  exporters.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/common/migrations/: 0001_add_report.py
backend/apps/common/moderation/: __init__.py  constants.py  image_classifier.py  services.py  tasks.py  text_filter.py
backend/apps/common/safety/: constants.py  middleware.py  services.py
backend/apps/common/tests/: __init__.py  test_gdpr.py  test_moderation.py  test_reports.py  test_safety.py
backend/apps/feed/: admin.py  apps.py  cache.py  constants.py  events.py  fanout.py  models.py  ranking.py  selectors.py  services.py  tasks.py  urls.py  views.py
backend/apps/feed/management/commands/: run_feed_consumer.py
backend/apps/feed/migrations/: 0001_initial.py
backend/apps/feed/tests/: conftest.py  test_cache.py  test_fanout.py  test_models.py  test_ranking.py  test_selectors.py  test_tasks.py  test_views.py
backend/apps/likes/: admin.py  apps.py  cache.py  constants.py  events.py  exceptions.py  models.py  permissions.py  selectors.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/likes/migrations/: 0001_initial.py
backend/apps/likes/tests/: conftest.py  factories.py  test_cache.py  test_services.py  test_views.py
backend/apps/media/: __init__.py  services.py  storage.py  tasks.py  transcoder.py  urls.py
backend/apps/media/tests/: test_media_services.py
backend/apps/messaging/: admin.py  apps.py  constants.py  consumers.py  exceptions.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
backend/apps/messaging/migrations/: 0001_initial.py
backend/apps/messaging/tests/: conftest.py  factories.py  test_models.py  test_mutations.py  test_queries.py  test_services.py
backend/apps/notifications/: admin.py  constants.py  consumers.py  dispatchers.py  events.py  exceptions.py  middleware.py  models.py  permissions.py  selectors.py  serializers.py  services.py  tasks.py  urls.py  validators.py  views.py
backend/apps/notifications/management/commands/: run_notification_consumer.py
backend/apps/notifications/migrations/: 0001_initial.py  0002_alter_devicetoken_created_at_alter_devicetoken_id_and_more.py
backend/apps/notifications/tests/: conftest.py  factories.py  test_consumers.py  test_event_contracts.py  test_models.py  test_mutations.py  test_queries.py  test_services.py
backend/apps/posts/: admin.py  constants.py  events.py  exceptions.py  models.py  selectors.py  serializers.py  services.py  urls.py  validators.py  views.py
backend/apps/posts/migrations/: 0001_initial.py  0002_search_trigger.py
backend/apps/posts/tests/: conftest.py  factories.py  test_models.py  test_selectors.py  test_services.py  test_views.py
backend/apps/users/: admin.py  constants.py  events.py  exceptions.py  managers.py  models.py  permissions.py  selectors.py  serializers.py  services.py  urls.py  validators.py  views.py
backend/apps/users/migrations/: 0001_initial.py
backend/apps/users/tests/: conftest.py  factories.py  test_models.py  test_selectors.py  test_services.py  test_views.py
backend/config/: asgi.py  celery.py  routing.py  urls.py
backend/config/settings/: base.py  development.py  production.py  testing.py
backend/core/database/: __init__.py  base_model.py  managers.py  mixins.py
backend/core/exceptions/: base.py  handler.py
backend/core/feature_flags/: __init__.py  client.py  decorators.py
backend/core/kafka/: __init__.py  base_event.py  consumer.py  producer.py  topics.py
backend/core/middleware/: __init__.py  exception_handler.py  metrics.py  request_logging.py  security_headers.py
backend/core/monitoring/: prometheus.py  sentry.py
backend/core/pagination/: __init__.py  connection.py  cursor.py
backend/core/redis/: __init__.py  cache.py  client.py  rate_limit.py
backend/core/security/: __init__.py  app_version.py  authentication.py  hashing.py  jwt.py  openapi.py
backend/core/test/: test_base_model.py  test_exception_handler.py  test_hashing.py  test_kafka_prouducer.py  test_rate_limiter.py  test_redis_client.py
backend/core/testing/: __init__.py  base.py  factories.py  mixins.py
backend/core/tests/: test_feature_flags.py  test_metrics.py
backend/tests/: conftest.py
backend/tests/integration/: test_ser_post_flow.py
backend/tests/load/: locustfile.py
backend/tests/load/scenarios/: auth.py
docs/: api_contract.md  development_guidelines.md  friend_server_setup_guide.md  testing.md  tree_project.txt
docs/superpowers/plans/: 2026-04-21-stage2-slice-a-event-contract-unification.md  2026-04-23-mvp-simplification.md
docs/superpowers/specs/: 2026-04-21-auth-flow-stabilization-design.md  2026-04-21-stage2-gap-audit.md  2026-04-23-mvp-simplification-design.md
frontend/: FM_TRACEBILITY_S1_S5.md  README.md  ROADMAP_AUDIT_S1_S5.md  commitlint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
frontend/.github/workflows/: ci.yml  deploy-web.yml
frontend/apps/mobile/: app.json  babel.config.js  package.json  tsconfig.json
frontend/apps/mobile/app/: _layout.tsx
frontend/apps/mobile/app/(auth)/: _layout.tsx  login.tsx
frontend/apps/web/: next.config.ts  package.json  postcss.config.js  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/apps/web/src/: middleware.ts
(+99 files in other folders)
